# Vulkan

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/kalasoft/vulkan/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kalasoft/vulkan/: MainActivity.java
app/src/main/jni/: AndriodEvents.cpp  AndriodEvents.h  AppContext.cpp  AppContext.h  CMakeLists.txt  Commons.cpp  Commons.h  Graphics.cpp  Graphics.h  KVulkan.cpp  KVulkan.h  Main.cpp  Vulkan.cpp  Vulkan.h  info  vulkan_wrapper.cpp  vulkan_wrapper.h
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/kalasoft/vulkan/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
